WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279391
Fix missing parameter to LinkBuffer::finalizeCodeWithAssembly
https://bugs.webkit.org/show_bug.cgi?id=279391
Summary
Fix missing parameter to LinkBuffer::finalizeCodeWithAssembly
Kiet Ho
Reported
2024-09-09 16:07:05 PDT
Fix missing parameter to LinkBuffer::finalizeCodeWithAssembly
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-09 16:07:26 PDT
<
rdar://problem/135604960
>
Kiet Ho
Comment 2
2024-09-09 16:31:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33346
EWS
Comment 3
2024-09-10 02:05:22 PDT
Committed
283407@main
(e9aa88e8594b): <
https://commits.webkit.org/283407@main
> Reviewed commits have been landed. Closing PR #33346 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug