Fix missing parameter to LinkBuffer::finalizeCodeWithAssembly rdar://135604960 https://bugs.webkit.org/show_bug.cgi?id=279391

Reviewed by Yusuke Suzuki.

This particular use of LinkBuffer::finalizeCodeWithAssembly is gated
behind a debugging macro, hence it wasn't built and didn't raise
compiler errors. I manually confirmed it built without errors with
the debugging macro defined.

* Source/WebCore/cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::SelectorCodeGenerator::compile):

Canonical link: https://commits.webkit.org/283407@main